--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <body>
         <section id="nav-bar">
         <nav class="navbar navbar-expand-lg navbar-light">
-            <a class="navbar-brand" href="#">LOGO</a>
+            <a class="navbar-brand" href="#"><img src="static%20void.png"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                <i class="fa fa-bars"></i>
             </button>
@@ -48,7 +48,7 @@
         <div class="row">
         <div class="col-md-6 text-center">
             <p class="ltitle">I For Work</p>
-            <p class="lslogan">A home-services-on-demand app that makes a difference</p>
+            <p class="lslogan">A home-services-on-demand app that makes a difference.</p>
             <a href="#"><img src="applestore.png" class="apple"></a>
             <a href="#"><img src="playstor.png" class="playstore"></a>
         </div>
@@ -70,14 +70,14 @@
         <div class="col-md-4 services">
         <img src="cleaning.png" class="ims" height="250" >
         <h3>What is I For Work?</h3>
-        <p>I For Work is a mobile application available for both iOS and Android that will allow users to request for home services such as cleaning, gardening, painting, etc. All you have to do is select what you want done, give some deatils about the job, include your location, price range and preffered date and time and send in a request. Experienced Service providers in your area will see your request and reply with a quote and then you can decide who to choose. You'll also be able to communicate with your service provider to ensure the job gets done smoothly.</p>
+        <p>I For Work is a mobile application available for both iOS and Android that will allow users to request for home services such as cleaning, gardening, painting, etc. All you have to do is select what you want done, give some deatils about the job, include your location, price range and preffered date and time and send in a request. Experienced service providers in your area will see your request and reply with a quote and then you can decide who to choose. You'll also be able to communicate with your service provider to ensure the job gets done smoothly.</p>
         </div>
         <div class="col-md-4 services">
             <img src="diversity.png" class="ims" height="250" >
         <h3>What makes us different?</h3>
         <p>Newly-arrived people from culturally and linguistically diverse (CALD) backgrounds are having difficulties in finding employment even for low
 skilled work due to obstacles such as low English proficiency and discrimination from employers; hence
-they are more likely to start a small business of their own. The project aims to provide such sole trader
+they are more likely to start a small business of their own. This project aims to provide such sole trader
 business and individuals a platform where they can register and offer their services and for potential
 customers to be able to find and book their services. I For Work will:</p>
             <ul class="list">
@@ -108,7 +108,7 @@ programs.  IMS is also committed to social justice principles.</p>
 <section id="aboutUs">
     <h2 class="team">Meet The Team</h2>
     <p class="teamdescription">
-We are Static Void, we're team of 5 students from the University of Wollongong, Australia fortunate enough to be chosen by IMS for this project, the I For Work project was our first pick, we were instantly attracted to the idea of this project because we are confident in our ability to develop the required application and also want to make a difference in the lives of some people along the way, and IMS chose us over three other groups, we aim to 
+We are Static Void, we're team of 5 students from the University of Wollongong, Australia, fortunate enough to be chosen by IMS for this project over three other groups, the I For Work project was our first pick, we were instantly attracted to the idea of this project because we are confident in our ability to develop the required application and also want to make a difference in the lives of some people along the way, we aim to deliver a dynamic application that is easy to use, allows customers to seamlessly recieve services they need and to give people from CALD backgrounds a platfrom where they can operate a small business without the need for vast technical knowledge.
     </p>
 <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
   <div class="carousel-inner">
@@ -156,7 +156,7 @@ Zaima is doing her bachelors in Computer Science majoring in Cyber security, she
                             DEVELOPER
                         </div>
                         <div class="about">
-                            lorem ipsum eiruh eoive oevoeij niejvnwe iuevi iwerbv iwehrvui weurvhiew iwebrivb iwuevhiwe iwufhviweub lorem ipsum eiruh eoive oevoeij niejvnwe iuevi iwerbv iwehrvui weurvhiew iwebrivb iwuevhiwe iwufhviweub lorem ipsum eiruh eoive oevoeij niejvnwe iuevi iwerbv iwehrvui weurvhiew iwebrivb iwuevhiwe iwufhviweub
+                            Emmanuel is doing his bachelors in Computer Science majoring in Cyber Security, he is responsible for the front-end developement of the application, he knows languages which include Java, C#, Swift and C++. Emmanuel likes to read in his free time and is also fond of fishkeeping.
                         </div>
                     </div>
     </div>
@@ -172,7 +172,7 @@ Zaima is doing her bachelors in Computer Science majoring in Cyber security, she
                             DOCUMENTATION MANAGER
                         </div>
                         <div class="about">
-                            lorem ipsum eiruh eoive oevoeij niejvnwe iuevi iwerbv iwehrvui weurvhiew iwebrivb iwuevhiwe iwufhviweub lorem ipsum eiruh eoive oevoeij niejvnwe iuevi iwerbv iwehrvui weurvhiew iwebrivb iwuevhiwe iwufhviweub lorem ipsum eiruh eoive oevoeij niejvnwe iuevi iwerbv iwehrvui weurvhiew iwebrivb iwuevhiwe iwufhviweub
+                            Danny is doing his bachelors in Computer Science majoring in Cyber Security, he is mainly responsible for the documentation involving the project and testing of the application but will also help with some front-end coding and UI design, he knows languages such as C++, Java and HTML. Danny likes to play sports, video games and is a huge movie buff.
                         </div>
                     </div>
     </div>
@@ -188,7 +188,7 @@ Zaima is doing her bachelors in Computer Science majoring in Cyber security, she
                             DOCUMENTATION MANAGER
                         </div>
                         <div class="about">
-                            lorem ipsum eiruh eoive oevoeij niejvnwe iuevi iwerbv iwehrvui weurvhiew iwebrivb iwuevhiwe iwufhviweub lorem ipsum eiruh eoive oevoeij niejvnwe iuevi iwerbv iwehrvui weurvhiew iwebrivb iwuevhiwe iwufhviweub lorem ipsum eiruh eoive oevoeij niejvnwe iuevi iwerbv iwehrvui weurvhiew iwebrivb iwuevhiwe iwufhviweub
+                            Will is doing his bachelors in Computer Science majoring in Big Data, he is mainly responsible for the documentation involving the project and testing of the application but will also help in UI design and web development. Will enjoys playing video games in his free time, watching movies and listening to music.
                         </div>
                     </div>
     </div>
@@ -224,7 +224,6 @@ from the Karenni, Karen, Kachin and Chin hill tribes and each have their own dis
 language. Swahili, French or Ewe are usually spoken by the people who originate from
 African regions.
 
-6
 Among newly arrived refugees and migrants, the level of educational ability and skill they
 possess varies. Some have strong English proficiency and tertiary qualifications but fail to
 secure employment as they do not have any Australian work experience and/or their
@@ -246,7 +245,11 @@ customers who may want cost effective service options.</p>
         <div class="row">
         <div class="col-md-6 ">
             <h3>Design Methodology</h3>
-
+            <p>Our clients have expressed that they would like to stay true to the design ideologies of both Android and iOS which is why we will follow the material design principles for the Android version of the app and flat design for the iOS version of the app. Flat design is great for users who are very familiar with digital interaction, material design may look flat but it takes the Z-axis into consideration making it multidimensional. Both flat and material are minimalist styles, the application will use minimalism to ensure only important and useful functionalities/information are readily available to the user.<br><br>
+The colour scheme of the application has been selected to have a similar green theme as the IMS logo but not the exact same green to give I For Work its own brand colours but to still have a link to the IMS branding. High contrast makes imagery easier to see, colour contrast is used for users to be able to distinguish various text and non-text elements, a low-contrast image may be hard for some users to see in bright or low light conditions. The application incorporates lots of icons that enable users to readily recognise their meaning, icons are assumed to be easier to learn and remember than commands which is helpful for users with low English proficiency. Moreover, the application will have language settings allow users to change the default language to a language of their choice hence the application is designed with sufficient space for large and foreign language fonts. <br><br>
+The application has both a flat list menu and an expanding menu, flat list menus are good at displaying a small number of options at the same time and where the size of the display is small, and an expanding menu enables more options to be shown on a single screen than is possible with a single flat menu.
+Some more design features include: Back buttons which gives users control and freedom to easily escape from places they unexpectedly find themselves, by using clearly marked emergency exits', error messages that helps users recognize, diagnose, and recover from errors, plain language is used to describe the nature of the problem and suggest a way of solving it, acknowledging actions provide text to let the user know whether an action they chose has been completed and confirming actions ask the user to verify that they want to proceed with an action.
+</p>
         </div>
             <div class="col-sm-6 text-center">
             <img src="interface.PNG" class="img-fluid" width="300">
@@ -256,10 +259,17 @@ customers who may want cost effective service options.</p>
            
     <div class="devenv">
     <h3>Development Environment</h3>
-        <p></p>
+        <p>Android Studio: Android Studio is the official integrated development environment (IDE) for Android application development. It is based on the IntelliJ IDEA, a Java integrated development environment for software, and integrates its code editing and developer tools. To support application development within the Android operating system, Android Studio uses a Gradle-based build system, emulator, code templates, and Github integration. Every project in Android Studio has one or more modalities with source code and resource files. These modalities include Android app modules, Library modules, and Google App Engine modules. <br><br>
+Xcode: Xcode is an integrated development environment (IDE) for macOS containing a suite of software development tools developed by Apple for developing software for iOS. The Xcode suite includes most of Apple's developer documentation, and built-in Interface Builder, an application used to construct graphical user interfaces. Xcode lets users take advantage of SwiftUI which is an innovative and simple way to build user interfaces across all Apple platforms using Swift. One can build user interfaces for any Apple device using just one set of tools and APIs and with declarative Swift syntax to help write simpler code that clearly states what your user interface should do.
+</p>
     </div>
 </section>
 <section id="contactus">
+    <div class="contact">
+    <h3>Contact Us</h3>
+        <p>If you have any questions or comments about I For Work please email project lead Zaima on: </p>
+        <h5>zk971@uowmail.edu.au</h5>
+    </div>
 </section>
         
     </body>
