final final changes

--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@ Some more design features include: Back buttons which gives users control and fr
 </p>
         </div>
             <div class="col-sm-6 text-center">
-            <img src="interface.PNG" class="img-fluid" width="300">
+            <img src="interface%20(2).PNG" class="img-fluid" width="300">
             </div>
         </div>    
         </div>    
